[DEV] - Added logs to Kibana